main/default/objects/Workstep_Issue__c/fields/Account_Business_Segment__c.field-meta.xml
<CustomField>
    <fullName>Account_Business_Segment__c</fullName>
    <formula>Workstep__r.Order__r.Account_Business_Segment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Business Segment</label>
    <type>Text</type>
</CustomField>