main/default/objects/Workstep_Issue__c/fields/Account_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Text__c</fullName>
    <formula>IF( 
Workstep__r.Order__r.Opportunity__c != null, 
Workstep__r.Order__r.Opportunity__r.Account.Name, 
Workstep__r.Order__r.Account__r.Name 
)</formula>
    <label>Account Name Text</label>
    <type>Text</type>
</CustomField>