main/default/objects/Workstep_Issue__c/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <formula>IF( 
 Workstep__r.Order__r.Opportunity__c != null,
 HYPERLINK( 
   Workstep__r.Order__r.Opportunity__r.Account.Id, 
   Workstep__r.Order__r.Opportunity__r.Account.Name ),
 HYPERLINK(
   Workstep__r.Order__r.Account__r.Id, 
   Workstep__r.Order__r.Account__r.Name )
)</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>