main/default/objects/Workstep_Issue__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <description>This is the list of carriers who may be responsible for resolving the issue.</description>
    <inlineHelpText>Select the Carrier that is responsible for the issue</inlineHelpText>
    <label>Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Risk_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>360 Networks</fullName>
            </value>
            <value>
                <fullName>ACS Alaska</fullName>
            </value>
            <value>
                <fullName>AT&amp;T</fullName>
            </value>
            <value>
                <fullName>Beanfield (CDA)</fullName>
            </value>
            <value>
                <fullName>Bell (CDA)</fullName>
            </value>
            <value>
                <fullName>Bell/MTS (CDA)</fullName>
            </value>
            <value>
                <fullName>Bell Aliant (CDA)</fullName>
            </value>
            <value>
                <fullName>Bend Broadband</fullName>
            </value>
            <value>
                <fullName>Birch</fullName>
            </value>
            <value>
                <fullName>Century Link</fullName>
            </value>
            <value>
                <fullName>Charter</fullName>
            </value>
            <value>
                <fullName>Click!</fullName>
            </value>
            <value>
                <fullName>Cologix</fullName>
            </value>
            <value>
                <fullName>Comcast</fullName>
            </value>
            <value>
                <fullName>Consolidated</fullName>
            </value>
            <value>
                <fullName>Coresite</fullName>
            </value>
            <value>
                <fullName>COX</fullName>
            </value>
            <value>
                <fullName>DGEB</fullName>
            </value>
            <value>
                <fullName>East Slope</fullName>
            </value>
            <value>
                <fullName>Enmax owned by Shaw (CDA)</fullName>
            </value>
            <value>
                <fullName>Enventis</fullName>
            </value>
            <value>
                <fullName>Equinix</fullName>
            </value>
            <value>
                <fullName>Fibrenoire owned by Videotron (CDA)</fullName>
            </value>
            <value>
                <fullName>First Digital</fullName>
            </value>
            <value>
                <fullName>Frontier</fullName>
            </value>
            <value>
                <fullName>Inteliquent</fullName>
            </value>
            <value>
                <fullName>Level3</fullName>
            </value>
            <value>
                <fullName>Level 3 – Extended</fullName>
            </value>
            <value>
                <fullName>Livewire</fullName>
            </value>
            <value>
                <fullName>LS Networks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>