main/default/objects/Workstep_Issue__c/fields/Current_Action__c.field-meta.xml
<CustomField>
    <fullName>Current_Action__c</fullName>
    <description>Current Action</description>
    <label>Current Action</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>