main/default/objects/Workstep_Issue__c/fields/Expected_Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Follow_Up_Date__c</fullName>
    <defaultValue>Now()</defaultValue>
    <description>Expected Follow Up Date</description>
    <label>Expected Follow Up Date</label>
    <type>DateTime</type>
</CustomField>