main/default/objects/Workstep_Issue__c/fields/Last_Time_Touched__c.field-meta.xml
<CustomField>
    <fullName>Last_Time_Touched__c</fullName>
    <label>Last Time Touched</label>
    <type>DateTime</type>
</CustomField>