main/default/objects/Workstep_Issue__c/fields/Order_Text_Name__c.field-meta.xml
<CustomField>
    <fullName>Order_Text_Name__c</fullName>
    <description>This field pulls back the Order Number (Name) in a text format so that it can be used in email templates. This is because the current Order Number (Name) on the Workstep Issue is a hyperlink field and the hyperlinks do not work on email templates. This Order Text Name is to be hidden from the Workstep Issue layout.</description>
    <formula>Workstep__r.Order__r.Name</formula>
    <label>Order Text Name</label>
    <type>Text</type>
</CustomField>