main/default/objects/Workstep_Issue__c/fields/Reason_Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Reason_Subcategory__c</fullName>
    <label>Reason Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Address Discrepancies</fullName>
            </value>
            <value>
                <fullName>APOT/CFA</fullName>
            </value>
            <value>
                <fullName>Awaiting Equipment</fullName>
            </value>
            <value>
                <fullName>Await NST Work</fullName>
            </value>
            <value>
                <fullName>BLA</fullName>
            </value>
            <value>
                <fullName>BLA not issued</fullName>
            </value>
            <value>
                <fullName>Capacity - HPBX</fullName>
            </value>
            <value>
                <fullName>Capacity – Issue or Non Existent</fullName>
            </value>
            <value>
                <fullName>Carrier Change</fullName>
            </value>
            <value>
                <fullName>CCD not populated</fullName>
            </value>
            <value>
                <fullName>CFA in use/incorrect</fullName>
            </value>
            <value>
                <fullName>Click scheduling conflict</fullName>
            </value>
            <value>
                <fullName>CLR/GLR Issue</fullName>
            </value>
            <value>
                <fullName>COLO x-connect needed</fullName>
            </value>
            <value>
                <fullName>Comcast NNI</fullName>
            </value>
            <value>
                <fullName>Conditioning</fullName>
            </value>
            <value>
                <fullName>Construction process</fullName>
            </value>
            <value>
                <fullName>CPE</fullName>
            </value>
            <value>
                <fullName>Customer End User Requirements</fullName>
            </value>
            <value>
                <fullName>Customer Implementation Plan</fullName>
            </value>
            <value>
                <fullName>Customer in Contract</fullName>
            </value>
            <value>
                <fullName>Customer un-responsive</fullName>
            </value>
            <value>
                <fullName>Design Template Missing/Incomplete</fullName>
            </value>
            <value>
                <fullName>Distance Does Not Qualify</fullName>
            </value>
            <value>
                <fullName>DMARC information Missing</fullName>
            </value>
            <value>
                <fullName>EELCAP</fullName>
            </value>
            <value>
                <fullName>End User Requirements not met</fullName>
            </value>
            <value>
                <fullName>Engineering Delay</fullName>
            </value>
            <value>
                <fullName>Entrance Facilities/Customer provided</fullName>
            </value>
            <value>
                <fullName>Entrance facilities/LEC provided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>