main/default/objects/Workstep_Issue__c/fields/Resolution_Comments__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Comments__c</fullName>
    <label>Resolution Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>