main/default/objects/Workstep_Issue__c/fields/Sub_Order__c.field-meta.xml
<CustomField>
    <fullName>Sub_Order__c</fullName>
    <formula>HYPERLINK( 
Workstep__r.Sub_Order__r.Id, 
Workstep__r.Sub_Order__r.Name )</formula>
    <label>Sub-Order</label>
    <type>Text</type>
</CustomField>