main/default/objects/Workstep_Issue__c/fields/Sub_Order_Text_Name__c.field-meta.xml
<CustomField>
    <fullName>Sub_Order_Text_Name__c</fullName>
    <description>This field pulls back the Sub Order Name in a text format so that the Sub Order Name can be used in email templates. This is because the current Sub Order Name on the Workstep Issue is a hyperlink field and the hyperlinks do not work on email templates. This Sub Order Text Name is to be hidden from the Workstep Issue layout.</description>
    <formula>Workstep__r.Sub_Order__r.Name</formula>
    <label>Sub Order Text Name</label>
    <type>Text</type>
</CustomField>