main/default/objects/Workstep_Issue__c/fields/Work_Group__c.field-meta.xml
<CustomField>
    <fullName>Work_Group__c</fullName>
    <label>Work Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Work Group 1</fullName>
            </value>
            <value>
                <fullName>Work Group 2</fullName>
            </value>
            <value>
                <fullName>Work Group 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>