main/default/objects/Workstep_Issue__c/fields/Workstep__c.field-meta.xml
<CustomField>
    <fullName>Workstep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Workstep</label>
    <referenceTo>Workstep__c</referenceTo>
    <relationshipLabel>Workstep Issues</relationshipLabel>
    <relationshipName>Workstep_Issues</relationshipName>
    <type>Lookup</type>
</CustomField>