main/default/objects/Workstep_Issue__c/validationRules/Enter_reason_code_when_issue_resolved.validationRule-meta.xml
<ValidationRule>
    <fullName>Enter_reason_code_when_issue_resolved</fullName>
    <active>true</active>
    <description>Enter Reason Code when issue is resolved</description>
    <errorConditionFormula>ISPICKVAL(Status__c , &quot;Resolved&quot;) &amp;&amp; ISBLANK(TEXT(   Resolution_Code__c ))</errorConditionFormula>
    <errorDisplayField>Resolution_Code__c</errorDisplayField>
    <errorMessage>Please enter a reason code when closing an issue.</errorMessage>
</ValidationRule>