main/default/objects/Workstep_Issue__c/listViews/Agent_Orders_Workstep_Issue.listView-meta.xml
<ListView>
    <fullName>Agent_Orders_Workstep_Issue</fullName>
    <filterScope>Queue</filterScope>
    <label>Agent Orders</label>
    <queue>Agent_Orders</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>