main/default/objects/Workstep_Issue__c/listViews/Ancillary_Services_Workstep_Issue.listView-meta.xml
<ListView>
    <fullName>Ancillary_Services_Workstep_Issue</fullName>
    <filterScope>Queue</filterScope>
    <label>Ancillary Services</label>
    <queue>Ancillary_Services</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>