main/default/objects/Workstep_Issue__c/listViews/BPM_Project_Management_Workstep_Issue.listView-meta.xml
<ListView>
    <fullName>BPM_Project_Management_Workstep_Issue</fullName>
    <filterScope>Queue</filterScope>
    <label>BPM - Project Management</label>
    <queue>BPM_Project_Management</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>