main/default/objects/Workstep_Issue__c/listViews/CS_Pend_ETF_Workstep_Issue.listView-meta.xml
<ListView>
    <fullName>CS_Pend_ETF_Workstep_Issue</fullName>
    <filterScope>Queue</filterScope>
    <label>CS – Pend ETF</label>
    <queue>CS_Pend_ETF</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>