main/default/objects/Workstep_Issue__c/listViews/Data_Design_Workstep_Issue.listView-meta.xml
<ListView>
    <fullName>Data_Design_Workstep_Issue</fullName>
    <filterScope>Queue</filterScope>
    <label>Data-Design</label>
    <queue>Data_Design</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>