main/default/objects/Workstep_Issue__c/listViews/Data_Internet_Activation_Workstep_Issue.listView-meta.xml
<ListView>
    <fullName>Data_Internet_Activation_Workstep_Issue</fullName>
    <filterScope>Queue</filterScope>
    <label>Data/Internet-Activation</label>
    <queue>Data_Internet_Activation</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>