main/default/objects/Workstep_Issue__c/listViews/Data_Internet_Delivery_Management_Workstep_Issue.listView-meta.xml
<ListView>
    <fullName>Data_Internet_Delivery_Management_Workstep_Issue</fullName>
    <filterScope>Queue</filterScope>
    <label>Data/Internet-Delivery Management</label>
    <queue>Data_Internet_Delivery_Management</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>