main/default/objects/Workstep_Issue__c/listViews/Field_Services_PM_Workstep_Issue.listView-meta.xml
<ListView>
    <fullName>Field_Services_PM_Workstep_Issue</fullName>
    <filterScope>Queue</filterScope>
    <label>Field Services-PM</label>
    <queue>Field_Services_PM</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>