main/default/objects/Workstep_Issue__c/listViews/ITS_Integra_RTW_Workstep_Issue.listView-meta.xml
<ListView>
    <fullName>ITS_Integra_RTW_Workstep_Issue</fullName>
    <filterScope>Queue</filterScope>
    <label>DNU</label>
    <queue>ITS_Integra_RTW</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>