main/default/objects/Workstep_Issue__c/listViews/LEC_Escalations_Workstep_Issue.listView-meta.xml
<ListView>
    <fullName>LEC_Escalations_Workstep_Issue</fullName>
    <filterScope>Queue</filterScope>
    <label>LEC Escalations</label>
    <queue>LEC_Escalations</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>